More z-index changes to make sure side panels stay in front of widgets.

--- a/client/stylesheets/global.less
+++ b/client/stylesheets/global.less
@@ -422,7 +422,7 @@ header {
   height: calc(~"100% - 84px");
   right: -400px;
   width: 400px;
-  z-index: 103;
+  z-index: 401;
   background: #fff;
   padding: 8px;
   .transition(all 0.2s ease);
