--- a/client/views/desk/desk.less
+++ b/client/views/desk/desk.less
@@ -75,7 +75,7 @@ div[id^='editorWindow-'] {
   width: 350px;
   top: 30px;
   height: calc(~'100% - 30px');
-  z-index: 102;
+  z-index: 400;
   background: #fff;
   padding: 8px 15px 8px 8px;
   .transition(all 0.2s ease);
